@@ -10,7 +10,7 @@ visregPlot <- function(fit,f,name,nn,cond,type,trans,xtrans,alpha,jitter,partial
     else ylab <- as.character(formula(fit)[2])
     if (partial) ylim <- range(c(y$r,y$lwr,y$upr))
     else ylim <- range(c(y$lwr,y$upr))
-    plot.args <- list(x=1, y=1, ylim=ylim, xlab=name, ylab=ylab, type="n", xlim=xlim,xaxt=ifelse(is.factor(f[,name]),'n','s'))
+    plot.args <- list(x=1, y=1, ylim=ylim, xlab=name, ylab=ylab, type="n", xlim=xlim,xaxt=ifelse(is.factor(f[,name]),'n','s'),las=1)
     new.args <- list(...)
     if (length(new.args)) plot.args[names(new.args)] <- new.args
     do.call("plot", plot.args)
